# obs-studio

./: .gitignore  CMakeLists.txt
UI/: obs-app.cpp
libobs-cpu/: CMakeLists.txt  cpu-operations.cpp  cpu-subsystem.c  cpu-subsystem.h  cpu-x11.c
libobs/graphics/: graphics.h
plugins/linux-capture/: xcompcap-main.cpp
